tests/ui/rfcs/rfc-1445-restrict-constants-in-patterns/cant-hide-behind-doubly-indirect-param.stderr
error: constant of non-structural type `WrapParam<'_, NoDerive>` in a pattern
  --> $DIR/cant-hide-behind-doubly-indirect-param.rs:22:9
   |
LL | struct WrapParam<'a, T>(&'a &'a T);
   | ----------------------- `WrapParam<'_, NoDerive>` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
LL |
LL | const WRAP_DOUBLY_INDIRECT_PARAM: & &WrapParam<NoDerive> = & &WrapParam(& & NoDerive(0));
   | -------------------------------------------------------- constant defined here
...
LL |         WRAP_DOUBLY_INDIRECT_PARAM => { panic!("WRAP_DOUBLY_INDIRECT_PARAM matched itself"); }
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ constant of non-structural type
   |
help: if `WrapParam<'_, NoDerive>` manually implemented `PartialEq`, you could add a condition to the match arm checking for equality
   |
LL -         WRAP_DOUBLY_INDIRECT_PARAM => { panic!("WRAP_DOUBLY_INDIRECT_PARAM matched itself"); }
LL +         binding if binding == WRAP_DOUBLY_INDIRECT_PARAM => { panic!("WRAP_DOUBLY_INDIRECT_PARAM matched itself"); }
   |

error: aborting due to 1 previous error

